<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fragment Navigation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="second_fragment">second fragment</string>
    <string name="third_fragment">third fragment</string>
    <string name="fragment_one_txt">You\'re now on fragment 1</string>
    <string name="first_fragment">first fragment</string>

    <string name="action_one">action one</string>
    <string name="action_two">action two</string>
    <string name="action_three">action three</string>
    <string name="action_four">action four</string>
    <string name="action_five">action five</string>



    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>
